[package]
name = "earst"
description = "A Unix FIFO file library for Rust"
version = "0.1.0"
authors = ["Tess Ellenoir Duursma <tess@albird.nl>","Alexia Mabel Davies <davies.alexia1996@gmail.com>"]
repository = "https://github.com/VanuPhantom/earst"
license = "MIT"
license-file = "LICENSE"
keywords = ["fifo", "named-pipe", "unix"]
categories = ["api-bindings", "filesystem", "os::unix-apis"]

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.27.1", features = ["fs"] }
tokio = { version = "1.34.0", features = ["full"] }
